Added simulation introduction to control chapter and moved section about unconsider system paramaters to end

--- a/control/control.tex
+++ b/control/control.tex
@@ -40,12 +40,20 @@
         \label{tbl:controller_summary}
     \end{table}
 
+    % \paragraph
+    % In this chapter, an overview of the different controllers will be given and the design process of each controller will be explained.
+    % A MATLAB/Simulink simulation environment will also be introduced to test these controllers.
+    % The controllers will then be tested in simulations with different system parameters and disturbances.
+    % Finally, the simulation results will be shown and discussed.
+    
     \paragraph
-    In this chapter, an overview of the different controllers will be given and the design process of each controller will be explained.
-    A MATLAB/Simulink simulation environment will also be introduced to test these controllers.
+    In this chapter, a MATLAB/Simulink simulation environment will be introduced to test the proposed control architectures.
+    An overview of the different controllers will be given and the design process of each controller will be explained.
     The controllers will then be tested in simulations with different system parameters and disturbances.
     Finally, the simulation results will be shown and discussed.
     
+    \input{control/simulation_environment}
+
     \input{control/pid}
 
     \input{control/lqr}
