--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -10,7 +10,7 @@ payload which is based on a practical multirotor UAV named Honeybee.
 The model is first derived as a \gls{2D} model.
 The system identification and control system techniques in later chapters will then be explained based on the \gls{2D} model to avoid unnecessary complexity.
 Finally, it will be described how this model and the techniques in later chapters are extended to the 3D case.
-This 3D mathematical model will be used in a nonlinear simulation of a multirotor and suspended payload.
+This 3D mathematical model will be used in a non-linear simulation of a multirotor and suspended payload.
 
 % ?? For good modelling of multirotor, survey: https://arxiv.org/pdf/2011.11104.pdf
 
