--- a/glossary.tex
+++ b/glossary.tex
@@ -5,7 +5,7 @@
 \newacronym{CoM}{CoM}{Centre of Mass}
 \newacronym{2D}{2D}{Two-Dimensional}
 \newacronym{3D}{3D}{three-Dimensional}
-\newacronym{NED}{NED}{North-East-Down}
+\newacronym{NED}{NED}{North East Down}
 
 \newacronym{MRAC}{MRAC}{Model Reference Adaptive Control}
 \newacronym{MPC}{MPC}{Model Predictive Control}
@@ -49,6 +49,7 @@
 \newacronym{MV}{MV}{Munipulated Variable}
 \newacronym{MO}{MO}{Measured Output}
 \newacronym{SISO}{SISO}{Single Input Single Output}
+
 
 % \newacronym{MOsp}{MO\subscript{sp}}{Measured Output Setpoint}
 
