--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -5,26 +5,54 @@
 \chapter{Modelling}
 \label{chap:modelling}
 
-This chapter discusses the mathematical modelling of a multirotor with a suspended
-payload which is based on a practical multirotor UAV named Honeybee.
-The model is first derived as a \gls{2D} model.
-The system identification and control system techniques in later chapters will then be explained based on the \gls{2D} model to avoid unnecessary complexity.
+\paragraph
+In this chapter, mathematical models of a multirotor with a suspended payload will be derived.
+These models will be used to simulate the multirotor system in subsequent chapters.
+The models will be based on the real multirotor named \emph{Honeybee}, which was built by \cite{Grobler2020} and will be described further in Chapter~\ref{chap:exp_design}.
+
+\paragraph
+% The system identification and control system techniques in later chapters will then be explained based on the \gls{2D} model to avoid unnecessary complexity.
 Finally, it will be described how this model and the techniques in later chapters are extended to the 3D case.
 This 3D mathematical model will be used in a non-linear simulation of a multirotor and suspended payload.
 
 % ?? For good modelling of multirotor, survey: https://arxiv.org/pdf/2011.11104.pdf
 
-\section{Coordinate frames}
-\section{States}
-\section{Forces and moments}
-\section{Lagrangian mechanics}
+\FloatBarrier\section{Coordinate frames}
+
+    \paragraph
+    A quadrotor with a standard X-configuration is considered in this work.
+    Figure~\ref{fig:coord_frames} shows a quadrotor schematic and two coordinate frames that will be used to describe this system.
+    
+    \begin{figure}[htb]
+        \centering
+        \includegraphics[width=0.818\linewidth]{modelling/fig/coord_frames}
+        \caption{Coordinate frames of a quadrotor \cite{Erasmus2020}}
+        \label{fig:coord_frames}
+    \end{figure}
+
+    \paragraph
+    The inertial frame is denote by $ \mathcal{I} = \{ \bm{\bar{x}}_\mathcal{I}, \bm{\bar{y}}_\mathcal{I}, \bm{\bar{z}}_\mathcal{I} \} $ and describes a \gls{NED} axis system.
+    The $x$, $y$, and $z$ axis, align with the North, East, and Down inertial directions respectively.
+    The inertial frame assumes a flat, non-rotating earth, since the quadrotor will travel small distances in comparison to the radius of the earth.
+    The origin of this frame is fixed at the takeoff location of the multirotor.
+
+    \paragraph
+    The body frame is denote by $ \mathcal{B} = \{ \bm{\bar{x}}_\mathcal{B}, \bm{\bar{y}}_\mathcal{B}, \bm{\bar{z}}_\mathcal{B} \} $ and is fixed to the quadrotor body.
+    The origin of this frame is at the \gls{CoM} of the vehicle and the $x$, $y$, and $z$ axis, align with the forwards, rightwards, and downwards directions of the quadrotor body respectively.
+    The body frame is described by a translation and rotation relative to the inertial frame.
+
+\FloatBarrier\section{Multirotor with a suspended payload}
+
+
+\FloatBarrier\section{Forces and moments}
+\FloatBarrier\section{Lagrangian mechanics}
     \begin{enumerate}
         \item Discuss weak link between altitude dynamics and swing angle
     \end{enumerate}
-\section{Linearised model}
+\FloatBarrier\section{Linearised model}
     \label{sec:linear_model}
 
-\section{Discretised model}
+\FloatBarrier\section{Discretised model}
 \FloatBarrier\section{Model verification} \label{sec:model_verification}
 
     \paragraph
