--- a/system_id/white_black_box.tex
+++ b/system_id/white_black_box.tex
@@ -19,7 +19,7 @@
         \paragraph 
         This approach is used by \cite{Erasmus2020} and \cite{Slabber2020} for system identification 
         for swing damping control of a multirotor with an unknown suspended payload.
-        The system was modelled as two rigid bodies connected by a link and the following assumptions were made regarding the suspended payload:
+        Recall from Chapter~\ref{chap:modelling} that the system was modelled as two connected rigid bodies with the following assumptions:
         \begin{itemize}
             \item The payload is a point mass.
             \item The link is massless.
