Started writing quaternion section

--- a/glossary.tex
+++ b/glossary.tex
@@ -3,8 +3,8 @@
 % Acronym Entries
 \newacronym{DoF}{DoF}{Degree of Freedom}
 \newacronym{CoM}{CoM}{Centre of Mass}
-\newacronym{2D}{2D}{Two-Dimensional}
-\newacronym{3D}{3D}{three-Dimensional}
+\newacronym{2D}{2D}{Two Dimensional}
+\newacronym{3D}{3D}{Three Dimensional}
 \newacronym{NED}{NED}{North East Down}
 
 \newacronym{MRAC}{MRAC}{Model Reference Adaptive Control}
